--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,6 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "normalize";
+@import "social-challenge.webflow";
+@import "webflow";
