--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Mon Mar 08 2021 14:43:46 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5fa3e36b354e5d727e56aef2" data-wf-site="5fa3e36a0cc882509938841c">
   <head>
     <title>SocialChallenge</title>
     <%= csrf_meta_tags %>
@@ -27,8 +28,11 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
 
-    <%= yield %>
+    <div class="page-content">
+      <%= yield %>
+    </div>
+
+    <%= render 'shared/flashes' %>
   </body>
 </html>
