--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,15 @@
 <div class="all-content w-clearfix">
-  <header class="main-column header"><img src="images/thumb1.jpg" loading="lazy" alt="" class="image">
+  <header class="main-column header"><img src="assets/thumb1.jpg" loading="lazy" alt="" class="image">
     <div class="big-tagline w-hidden-small w-hidden-tiny">Do Good.<br>Feel Good.</div>
     <div class="info-wrapper">
       <div class="tagline">30-Day Social Challenge</div>
       <div class="byline">Make the world just a little bit better</div>
     </div>
     <div class="footer-wrapper w-clearfix">
-      <a href="#" class="footer-nav-link w-inline-block"><img src="images/home-icon.svg" alt=""></a>
-      <a href="http://www.twitter.com/webflowapp" class="footer-nav-link w-inline-block"><img src="images/twitter-icon.svg" alt=""></a>
-      <a href="http://www.facebook.com/webflow" class="footer-nav-link w-inline-block"><img src="images/facebook-icon.svg" alt=""></a>
-      <a href="subscribe.html" class="footer-nav-link w-inline-block"><img src="images/user-solid.svg" alt=""></a>
+      <a href="#" class="footer-nav-link w-inline-block"><img src="assets/home-icon.svg" alt=""></a>
+      <a href="http://www.twitter.com/webflowapp" class="footer-nav-link w-inline-block"><img src="assets/twitter-icon.svg" alt=""></a>
+      <a href="http://www.facebook.com/webflow" class="footer-nav-link w-inline-block"><img src="assets/facebook-icon.svg" alt=""></a>
+      <a href="subscribe.html" class="footer-nav-link w-inline-block"><img src="assets/user-solid.svg" alt=""></a>
     </div>
   </header>
   <div class="main-column content">
@@ -37,7 +37,7 @@
       <div class="w-slider-nav w-round"></div>
     </div>
     <a href="article.html" class="challenge w-inline-block w-clearfix">
-      <div class="image-wrapper"><img src="images/thumb11.jpg" width="109" alt="" class="thumbnail"></div>
+      <div class="image-wrapper"><img src="assets/thumb11.jpg" width="109" alt="" class="thumbnail"></div>
       <section class="challenge-text-wrapper w-clearfix">
         <h2 class="arrow">❯</h2>
         <h2 class="thumbnail-title">Firstname Lastname, Nov. 5th 2020</h2>
@@ -45,7 +45,7 @@
       </section>
     </a>
     <a href="article.html" class="challenge w-inline-block w-clearfix">
-      <div class="image-wrapper"><img src="images/thumb14.jpg" width="109" alt="" class="thumbnail"></div>
+      <div class="image-wrapper"><img src="assets/thumb14.jpg" width="109" alt="" class="thumbnail"></div>
       <section class="challenge-text-wrapper w-clearfix">
         <h2 class="arrow">❯</h2>
         <h2 class="thumbnail-title">Firstname Lastname, Nov. 5th 2020</h2>
@@ -53,7 +53,7 @@
       </section>
     </a>
     <a href="article.html" class="challenge w-inline-block w-clearfix">
-      <div class="image-wrapper"><img src="images/thumb10.jpg" width="109" alt="" class="thumbnail"></div>
+      <div class="image-wrapper"><img src="assets/thumb10.jpg" width="109" alt="" class="thumbnail"></div>
       <section class="challenge-text-wrapper w-clearfix">
         <h2 class="arrow">❯</h2>
         <h2 class="thumbnail-title">Firstname Lastname, Nov. 5th 2020</h2>
@@ -63,5 +63,5 @@
   </div>
 </div>
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fa3e36a0cc882509938841c" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="js/webflow.js" type="text/javascript"></script>
+<!-- <script src="js/webflow.js" type="text/javascript"></script> -->
 <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
