added image_tag test

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,9 @@
       <div class="byline">Make the world just a little bit better</div>
     </div>
     <div class="footer-wrapper w-clearfix">
-      <a href="#" class="footer-nav-link w-inline-block"><img src="assets/home-icon.svg" alt=""></a>
+      <a href="#" class="footer-nav-link w-inline-block">
+        <%= image_tag('home-icon.svg') %>
+        <!-- <img src="assets/home-icon.svg" alt=""></a> -->
       <a href="http://www.twitter.com/webflowapp" class="footer-nav-link w-inline-block"><img src="assets/twitter-icon.svg" alt=""></a>
       <a href="http://www.facebook.com/webflow" class="footer-nav-link w-inline-block"><img src="assets/facebook-icon.svg" alt=""></a>
       <a href="subscribe.html" class="footer-nav-link w-inline-block"><img src="assets/user-solid.svg" alt=""></a>
