--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,82 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
 <%= render "devise/shared/links" %>
+
+<div class="all-content w-clearfix">
+  <header class="main-column header">
+      <div loading="lazy" class="image">
+        <%= image_tag('thumb1.jpg') %>
+      </div>
+      <div class="big-tagline w-hidden-small w-hidden-tiny">Do Good.<br>Feel Good.</div>
+      <div class="info-wrapper">
+        <div class="tagline">30-Day Social Challenge</div>
+        <div class="byline">Make the world just a little bit better</div>
+      </div>
+      <div class="footer-wrapper w-clearfix">
+        <a href="#" class="footer-nav-link w-inline-block">
+          <%= image_tag('home-icon.svg') %>
+        </a>
+        <a href="#" class="footer-nav-link w-inline-block">
+          <%= image_tag('twitter-icon.svg') %>
+        </a>
+        <a href="#" class="footer-nav-link w-inline-block">
+          <%= image_tag('facebook-icon.svg') %>
+        </a>
+        <a href="subscribe.html" class="footer-nav-link w-inline-block">
+          <%= image_tag('user-solid.svg') %>
+        </a>
+      </div>
+    </header>
+  <div class="main-column content">
+    <nav data-collapse="small" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
+      <nav role="navigation" class="nav-menu w-nav-menu">
+        <%= link_to "SEE ALL", root_path, class: "nav-link w-nav-link" %>
+        <%= link_to "SUGGEST", suggest_path, class: "nav-link w-nav-link" %>
+        <%= link_to "ABOUT", about_path, class: "nav-link w-nav-link" %>
+        <%= link_to "JOIN", new_user_registration_path, class: "nav-link w-nav-link" %>
+      </nav>
+      <div class="menu-wrapper w-clearfix w-nav-button">
+        <div class="menu">MENU</div>
+        <div class="menu-icon w-icon-nav-menu"></div>
+      </div>
+    </nav>
+    <div class="section">
+      <h1>Join the Social Challenge</h1>
+      <p>Want to do Good and make the world just a little bit better? JOIN - it&#x27;s free! Just give us your contact info below and you&#x27;re on your way.</p>
+
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
+
+        <div class="form-inputs">
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+
+        <div class="form-actions">
+          <%= f.button :submit, "JOIN", class: "w-button" %>
+        </div>
+      <% end %>
+
+      <!-- <div class="form-wrapper w-form">
+        <form name="wf-form-subscribe" data-name="Subscribe" class="w-clearfix"><input type="text" name="first-name" data-name="First Name" placeholder="First Name" maxlength="256" required="" class="field first w-input"><input type="text" name="last-name" data-name="Last Name" placeholder="Last Name" maxlength="256" required="" class="field last w-input"><input type="email" name="email" data-name="Email" placeholder="Email Address" maxlength="256" required="" class="field email w-input"><input type="password" name="Password" data-name="Password" placeholder="Password" maxlength="256" required="" id="Password" class="field w-input"><input type="submit" value="JOIN" data-wait="Sweet!!!" wait="Sweet!!" class="button w-button"></form>
+        <div class="success-message w-form-done">
+          <h2>Awesome sauce!</h2>
+          <p>You&#x27;re subscribed to some awesome articles. Look out for weekly newsletters.</p>
+          <a href="index.html" class="button blue">Proof Home</a>
+        </div>
+        <div class="w-form-fail">
+          <p>Oops! Something went wrong while submitting the form :(</p>
+        </div>
+      </div> -->
+
+    </div>
+  </div>
+</div>
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fa3e36a0cc882509938841c" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
