added about page

--- a/app/views/pages/suggest.html.erb
+++ b/app/views/pages/suggest.html.erb
@@ -9,18 +9,10 @@
       <div class="byline">Make the world just a little bit better</div>
     </div>
     <div class="footer-wrapper w-clearfix">
-      <a href="#" class="footer-nav-link w-inline-block">
-        <%= image_tag('home-icon.svg') %>
-      </a>
-      <a href="#" class="footer-nav-link w-inline-block">
-        <%= image_tag('twitter-icon.svg') %>
-      </a>
-      <a href="#" class="footer-nav-link w-inline-block">
-        <%= image_tag('facebook-icon.svg') %>
-      </a>
-      <a href="subscribe.html" class="footer-nav-link w-inline-block">
-        <%= image_tag('user-solid.svg') %>
-      </a>
+      <a href="#" class="footer-nav-link w-inline-block"><%= image_tag('home-icon.svg') %></a>
+      <a href="#" class="footer-nav-link w-inline-block"><%= image_tag('twitter-icon.svg') %></a>
+      <a href="#" class="footer-nav-link w-inline-block"><%= image_tag('facebook-icon.svg') %></a>
+      <a href="subscribe.html" class="footer-nav-link w-inline-block"><%= image_tag('user-solid.svg') %></a>
     </div>
   </header>
   <div class="main-column content">
